--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
+    "joi": "^14.3.1",
     "mongoose": "^5.9.3",
     "morgan": "^1.9.1"
   },
